--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
+    "ua-parser-js": "^1.0.37",
     "vue": "^3.3.11",
+    "vue-google-oauth2": "^1.5.10",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
