--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "ua-parser-js": "^1.0.37",
