--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "consultar-cnpj": "^1.0.19",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "ua-parser-js": "^1.0.37",
     "vue": "^3.3.11",
     "vue-google-oauth2": "^1.5.10",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-google-login": "^2.0.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
