--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^5.1.1",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "axios": "^1.6.7",
     "consultar-cnpj": "^1.0.19",
+    "date-fns": "^3.6.0",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "ua-parser-js": "^1.0.37",
