✅ -- Plataforma Atualizada [ Correção de BUGS]

--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
   },
   "dependencies": {
     "@tinymce/tinymce-vue": "^5.1.1",
-    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "axios": "^1.6.7",
     "consultar-cnpj": "^1.0.19",
     "date-fns": "^3.6.0",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
-    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^3.3.0",
     "pinia": "^2.1.7",
     "ua-parser-js": "^1.0.37",
     "vue": "^3.3.11",
