--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,4 +32,4 @@ jobs:
         port: 21
         protocol: ftp
         local-dir: dist/
-        server-dir: /zonu/
+        server-dir: /app.zonu.com.br/
