--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.3.0",
     "pinia": "^2.1.7",
@@ -25,6 +26,7 @@
     "vue": "^3.3.11",
     "vue-google-oauth2": "^1.5.10",
     "vue-router": "^4.2.5",
+    "vue2-leaflet": "^2.7.1",
     "vue3-google-login": "^2.0.25"
   },
   "devDependencies": {
